// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interleave 1`] = `
Array [
  Array [
    Object {
      "tag": false,
    },
  ],
  Array [
    Object {
      "tag": false,
    },
  ],
  Array [
    Object {
      "tag": false,
    },
  ],
  Array [
    Object {
      "tag": false,
    },
  ],
  Array [
    Object {
      "tag": false,
    },
  ],
  Array [
    Object {
      "tag": false,
    },
  ],
  Array [
    Object {
      "tag": false,
    },
  ],
  Array [
    Object {
      "tag": true,
      "value": [Error: Event loop already started],
    },
  ],
  Array [
    Object {
      "tag": false,
    },
  ],
  Array [
    Object {
      "tag": true,
      "value": [Error: Event loop already stopped],
    },
  ],
  Array [
    Object {
      "tag": false,
    },
  ],
  Array [
    Object {
      "tag": true,
      "value": [Error: Event loop already started],
    },
  ],
  Array [
    Object {
      "tag": false,
    },
  ],
  Array [
    Object {
      "tag": true,
      "value": [Error: Event loop already stopped],
    },
  ],
  Array [
    Object {
      "tag": false,
    },
  ],
  Array [
    Object {
      "tag": true,
      "value": [Error: Event loop already started],
    },
  ],
  Array [
    Object {
      "tag": true,
      "value": [Error: Event loop already started],
    },
  ],
  Array [
    Object {
      "tag": false,
    },
  ],
  Array [
    Object {
      "tag": true,
      "value": [Error: Event loop already stopped],
    },
  ],
  Array [
    Object {
      "tag": true,
      "value": [Error: Event loop already stopped],
    },
  ],
]
`;

exports[`when set calls callback with expected arguments 1`] = `
Array [
  Array [
    Object {
      "tag": false,
    },
  ],
  Array [
    Object {
      "tag": true,
      "value": [Error: Event loop already started],
    },
  ],
  Array [
    Object {
      "tag": true,
      "value": [Error: Event loop already started],
    },
  ],
]
`;

exports[`when set cannot be set again 1`] = `
Object {
  "tag": true,
  "value": [Error: Event loop already started],
}
`;
